// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frame identity: the real App, byte for byte (SGR included) > 12x60 idle 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────────────────────────[22m
[38;2;243;134;161m› [39m[2mSay hi, ask a question, or describe a task…[22m
[1m[38;2;243;134;161mllm+jev · verified[39m[22m · idle                   step 0/–  ? help"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 12x60 palette 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────────────────────────[22m
[38;2;212;91;182m▌ [39m/help       h  keys by context, commands with one-liners,…
  /mode       m  engine mode: show, or set for the next run
  /model      ml generator model for the next run only
  /cost       c  run and session spend, per-step cost, pend…
  /status     s  run id, session id, step/max, stage, sandb…
  /resume     r  pick a session to continue, or continue <i…
[2m  (1/56)  Enter next · Tab picks · Esc closes ▼             [22m
[38;2;243;134;161m› [39m/[2mhelp +55[22m
[1m[38;2;243;134;161mllm+jev · verified[39m[22m · palette                 step 0/–  Tab ⇥"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 12x60 panel 1`] = `
"[2m─── ▾ decisions s1 ──── [d]ecisions [p]lan [t]ime [s]ynth ──[22m
[38;2;248;113;113ms1 risk    d3              L1    ████████·· 0.80 [block][39m
[38;2;251;191;36ms1 risk    d4              L1    ████████·· 0.80 [review][39m
s1 risk    d5              L1    ████████·· 0.80 [ok]
[38;2;248;113;113ms1 risk    d6              L1    ████████·· 0.80 [block][39m
[38;2;251;191;36ms1 risk    d7              L1    ████████·· 0.80 [review][39m
[2m  … 3 more rows · /panel full expands[22m
[38;2;251;191;36m› [39m[2mType to steer the next step…  Esc pauses[22m
[38;2;243;134;161m⠁[39m propose         step 1/40 1m12s  run $0.13/2.00 ok  ? help"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 12x60 review 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode[39m[2m ─ ▸ jev · no decisions yet ───────────────────[22m
[38;2;251;191;36mreview  step 1  risk 0.50 (exp)  edit src/a.py +1 −1 "fix …"[39m
[1m[38;2;251;191;36m[y] ok [n] no [d] note [e] expand [w] why [esc] decline[39m[22m
1 destructive    L2  █████·····  0.50 exp  0.70  loses untr…
2 out_of_scope   L0  ▌·········  0.05 exp  0.70  directly d…
3 plan_mismatch  L0  ▌·········  0.05 exp  0.70  matches \`i…
4 irreversible   L1  ██▌·······  0.25 exp  0.70  restorable…
5 matches_intent  —  not judged this step
› [2m(review pending)[22m
[1m[38;2;243;134;161mjev+llm[39m[22m · review  step 1/40 1m12s  run $0.13/2.00 ok  ? help"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 12x60 streaming 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────────────────────────[22m
1. read the 失敗 test ─┤ café́ 👍🏽 and the fixture
2. fix parse_date in src/dates.py — 日本語 partial
[38;2;243;134;161m› [39malso check 日本語 ✓ edge
[1m[38;2;243;134;161mllm+jev · verified[39m[22m · [38;2;243;134;161m⢎⣉⡱[39m replying           step 0/–  ? help"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 12x60 thinking 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────────────────────────[22m
[38;2;243;134;161m› [39m[2m(thinking…)[22m
[1m[38;2;243;134;161mllm+jev · verified[39m[22m · [38;2;243;134;161m⢎⣉⡱[39m thinking           step 0/–  ? help"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 24x80 idle 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────[22m
            [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████[22m
            [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
            [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m[2mSay hi, ask a question, or describe a task…[22m                               [2m │[22m
[2m├──────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22midle                                                        step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 24x80 palette 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────[22m
            [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████[22m
            [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
            [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m
[2m╭─ commands ───────────────────────────────────────────────────────────────────╮[22m
[2m│ [22m[38;2;212;91;182m▌ [39m/help       h  keys by context, commands with one-liners, per-terminal no…[2m │[22m
[2m│ [22m  /mode       m  engine mode: show, or set for the next run                 [2m │[22m
[2m│ [22m  /model      ml generator model for the next run only                      [2m │[22m
[2m│ [22m  /cost       c  run and session spend, per-step cost, pending caps         [2m │[22m
[2m│ [22m  /status     s  run id, session id, step/max, stage, sandbox, workspace, g…[2m │[22m
[2m│   (1/56)  Enter next · Tab picks · Esc closes ▼                              │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────╯[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m/[2mhelp +55[22m                                                                 [2m │[22m
[2m├──────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22mpalette                                                      step 0/–  Tab ⇥[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 24x80 panel 1`] = `
"[2m─── ▾ decisions s1 · c~ derived |2p−1| ──── [d]ecisions [p]lan [t]ime [s]ynth ──[22m
[38;2;248;113;113ms1 risk     d3               L1     ████████··  0.80  c 0.83   [block][39m
[38;2;251;191;36ms1 risk     d4               L1     ████████··  0.80  c 0.83   [review][39m
s1 risk     d5               L1     ████████··  0.80  c 0.83   [ok]
[38;2;248;113;113ms1 risk     d6               L1     ████████··  0.80  c 0.83   [block][39m
[38;2;251;191;36ms1 risk     d7               L1     ████████··  0.80  c 0.83   [review][39m
[2m  … 3 more rows · /panel full expands[22m
[38;2;212;91;182m╭─ [1m[38;2;243;134;161mjev+llm[22m[38;2;212;91;182m ───────────────────────────────────────────────────────────── [39m[2mproj[22m[38;2;212;91;182m ─╮[39m
[38;2;212;91;182m│ [38;2;251;191;36m› [39m[2mType to steer the next step…  Esc pauses[22m                                  [38;2;212;91;182m │[39m
[38;2;212;91;182m├──────────────────────────────────────────────────────────────────────────────┤[39m
[38;2;212;91;182m│ [38;2;243;134;161m⢎⣏⡱[39m propose                       step 1/40 1m12s  run $0.13/2.00 ok  ? help[38;2;212;91;182m │[39m
[38;2;212;91;182m╰──────────────────────────────────────────────────────────────────────────────╯[39m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 24x80 review 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode[39m[2m ─ ▸ jev · no decisions yet ───────────────────────────────────────[22m
[38;2;251;191;36m╭─ review · step 1 · risk 0.50 (exp) · edit src/a.py +1 −1 "fix the off-by-…" ─╮[39m
[38;2;251;191;36m│ [1m[y] approve [n] decline [d] decline+note [e] expand [w]1-5 why [esc] decline[22m │[39m
[38;2;251;191;36m│ [39mdimension        lvl 0  ┆   ┆ 1  risk bnd  conf  Jev's dominant level (why) [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m1 destructive    L2  █████·····  0.50 exp  0.70  loses untracked pre-existi…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m2 out_of_scope   L0  ▌·········  0.05 exp  0.70  directly does what \`plan.r…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m3 plan_mismatch  L0  ▌·········  0.05 exp  0.70  matches \`intent\` and the p…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m4 irreversible   L1  ██▌·······  0.25 exp  0.70  restorable by regenerating…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m5 matches_intent  —  not judged this step                                   [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;243;134;161m  ╶──── src/a.py                                                            [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;243;134;161m  @@ -1 +1 @@                                                               [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;248;113;113m  -x = 1                                                                    [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;74;222;128m  +x = 2                                                                    [38;2;251;191;36m │[39m
[38;2;251;191;36m╰──────────────────────────────────────────────────────────────────────────────╯[39m
[38;2;212;91;182m╭─ [1m[38;2;243;134;161mjev+llm[22m[38;2;212;91;182m ───────────────────────────────────────────────────────────── [39m[2mproj[22m[38;2;212;91;182m ─╮[39m
[38;2;212;91;182m│ [39m› [2m(review pending — keys in the card; d opens a note)[22m                       [38;2;212;91;182m │[39m
[38;2;212;91;182m├──────────────────────────────────────────────────────────────────────────────┤[39m
[38;2;212;91;182m│ [39mreview                            step 1/40 1m12s  run $0.13/2.00 ok  ? help[38;2;212;91;182m │[39m
[38;2;212;91;182m╰──────────────────────────────────────────────────────────────────────────────╯[39m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 24x80 streaming 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────[22m
1. read the 失敗 test ─┤ café́ 👍🏽 and the fixture
2. fix parse_date in src/dates.py — 日本語 partial
            [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████[22m
            [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
            [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39malso check 日本語 ✓ edge                                                  [2m │[22m
[2m├──────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22m[38;2;243;134;161m⢎⣉⡱[39m replying                                                step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 24x80 thinking 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────[22m
            [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████[22m
            [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
            [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
            [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m[2m(thinking…)[22m                                                               [2m │[22m
[2m├──────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22m[38;2;243;134;161m⢎⣉⡱[39m thinking                                                step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 30x40 idle 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m[2mSay hi, ask a question, or descri… │[22m
[2m├──────────────────────────────────────┤[22m
[2m│ [22midle                step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 30x40 palette 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────[22m
[2m╭─ commands ───────────────────────────╮[22m
[2m│ [22m[38;2;212;91;182m▌ [39m/help          keys by context, c…[2m │[22m
[2m│ [22m  /mode          engine mode: show,…[2m │[22m
[2m│ [22m  /model         generator model fo…[2m │[22m
[2m│ [22m  /cost          run and session sp…[2m │[22m
[2m│ [22m  /status        run id, session id…[2m │[22m
[2m│   (1/56)  Enter next · Tab picks · … │[22m
[2m╰──────────────────────────────────────╯[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m/[2mhelp +55[22m                         [2m │[22m
[2m├──────────────────────────────────────┤[22m
[2m│ [22mpalette              step 0/–  Tab ⇥[2m │[22m
[2m╰──────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 30x40 panel 1`] = `
"[2m─── ▾ decisions s1 ─────────────────────[22m
s1 risk    d3              L1    ██████…
s1 risk    d4              L1    ██████…
s1 risk    d5              L1    ██████…
s1 risk    d6              L1    ██████…
s1 risk    d7              L1    ██████…
[2m  … 3 more rows · /panel full expands[22m
[38;2;212;91;182m╭─ [1m[38;2;243;134;161mjev+llm[22m[38;2;212;91;182m ───────────────────── [39m[2mproj[22m[38;2;212;91;182m ─╮[39m
[38;2;212;91;182m│ [38;2;251;191;36m› [39m[2mType to steer the next step…  Esc…[22m[38;2;212;91;182m │[39m
[38;2;212;91;182m├──────────────────────────────────────┤[39m
[38;2;212;91;182m│ [38;2;243;134;161m⠁[39m pro…  step 1/40  run $0.13/2.00 ok[38;2;212;91;182m │[39m
[38;2;212;91;182m╰──────────────────────────────────────╯[39m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 30x40 review 1`] = `
"[2m─── ▸ jev · no decisions yet ───────────[22m
[38;2;251;191;36m╭─ review · step 1 · risk 0.50 (exp)… ─╮[39m
[38;2;251;191;36m│ [1my/n/d/e/w · esc                     [22m │[39m
[38;2;251;191;36m│ [39mdimension        lvl 0  ┆   ┆ 1  ri…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m1 destructive    L2  █████·····  0.…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m2 out_of_scope   L0  ▌·········  0.…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m3 plan_mismatch  L0  ▌·········  0.…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m4 irreversible   L1  ██▌·······  0.…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m5 matches_intent  —  not judged thi…[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;243;134;161m  ╶──── src/a.py                    [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;243;134;161m  @@ -1 +1 @@                       [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;248;113;113m  -x = 1                            [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;74;222;128m  +x = 2                            [38;2;251;191;36m │[39m
[38;2;251;191;36m╰──────────────────────────────────────╯[39m
[38;2;212;91;182m╭─ [1m[38;2;243;134;161mjev+llm[22m[38;2;212;91;182m ───────────────────── [39m[2mproj[22m[38;2;212;91;182m ─╮[39m
[38;2;212;91;182m│ [39m› [2m(review pending — keys in the car…[22m[38;2;212;91;182m │[39m
[38;2;212;91;182m├──────────────────────────────────────┤[39m
[38;2;212;91;182m│ [39mreview  step 1/40  run $0.13/2.00 ok[38;2;212;91;182m │[39m
[38;2;212;91;182m╰──────────────────────────────────────╯[39m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 30x40 streaming 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────[22m
1. read the 失敗 test ─┤ café́ 👍🏽 and the
2. fix parse_date in src/dates.py — 日…
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39malso check 日本語 ✓ edge          [2m │[22m
[2m├──────────────────────────────────────┤[22m
[2m│ [22m[38;2;243;134;161m⢎⣉⡱[39m replying        step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 30x40 thinking 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode 0.6.0[39m[2m ────────────────────[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m[2m(thinking…)[22m                       [2m │[22m
[2m├──────────────────────────────────────┤[22m
[2m│ [22m[38;2;243;134;161m⢎⣉⡱[39m thinking        step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 40x120 idle 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m


                                [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████  Decisions, not strings[22m
                                [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
                                [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m


[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m[2mSay hi, ask a question, or describe a task…                                                   / commands · @ files │[22m
[2m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22midle                                                                                                step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 40x120 palette 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m


                                [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████  Decisions, not strings[22m
                                [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
                                [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m


[2m╭─ commands ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮[22m
[2m│ [22m[38;2;212;91;182m▌ [39m/help       h  keys by context, commands with one-liners, per-terminal notes                                      [2m │[22m
[2m│ [22m  /mode       m  engine mode: show, or set for the next run                                                         [2m │[22m
[2m│ [22m  /model      ml generator model for the next run only                                                              [2m │[22m
[2m│ [22m  /cost       c  run and session spend, per-step cost, pending caps                                                 [2m │[22m
[2m│ [22m  /status     s  run id, session id, step/max, stage, sandbox, workspace, git, stop reason, lock                    [2m │[22m
[2m│   (1/56)  Enter next · Tab picks · Esc closes ▼                                                                      │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[22m
[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m/[2mhelp +55[22m                                                                                                         [2m │[22m
[2m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22mpalette                                                                                              step 0/–  Tab ⇥[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 40x120 panel 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode[39m[2m ─ ▾ decisions s1 · c~ derived |2p−1| ───────────────────────── [d]ecisions [p]lan [t]imeline [s]ynth ─────[22m


                                [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████  Decisions, not strings[22m
                                [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
                                [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m


[38;2;248;113;113ms1 risk     d3               L1     ████████··  0.80  c 0.83   [block]    170ms  reported[39m
[38;2;251;191;36ms1 risk     d4               L1     ████████··  0.80  c 0.83   [review]   170ms  reported[39m
s1 risk     d5               L1     ████████··  0.80  c 0.83   [ok]       170ms  reported
[38;2;248;113;113ms1 risk     d6               L1     ████████··  0.80  c 0.83   [block]    170ms  reported[39m
[38;2;251;191;36ms1 risk     d7               L1     ████████··  0.80  c 0.83   [review]   170ms  reported[39m
[2m  … 3 more rows · /panel full expands[22m
[38;2;212;91;182m╭─ [1m[38;2;243;134;161mjev+llm[22m[38;2;212;91;182m ───────────────────────────────────────────────────────────────────────────────────────────────────── [39m[2mproj[22m[38;2;212;91;182m ─╮[39m
[38;2;212;91;182m│ [38;2;251;191;36m› [39m[2mType to steer the next step…  Esc pauses   Esc Esc aborts[22m                                                         [38;2;212;91;182m │[39m
[38;2;212;91;182m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;2;212;91;182m│ [38;2;243;134;161m⢎⣏⡱[39m propose                                                               step 1/40 1m12s  run $0.13/2.00 ok  ? help[38;2;212;91;182m │[39m
[38;2;212;91;182m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 40x120 review 1`] = `
"[2m─── [22m[38;2;243;134;161m◆ jevcode[39m[2m ─ ▸ jev · no decisions yet ───────────────────────────────────────────────────────────────────────────────[22m


                                [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████  Decisions, not strings[22m
                                [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
                                [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m


[38;2;251;191;36m╭─ review · step 1 · risk 0.50 (exp on destructive) · edit src/a.py +1 −1 "fix the off-by-one" ────────────────────────╮[39m
[38;2;251;191;36m│ [1m[y] approve  [n] decline  [d] decline+note  [e] expand preview  [w]1-5 why  [esc] decline      [ctrl-c] abort run   [22m │[39m
[38;2;251;191;36m│ [39mdimension        lvl 0  ┆   ┆ 1  risk bnd  conf  Jev's dominant level (why)                                         [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m1 destructive    L2  █████·····  0.50 exp  0.70  loses untracked pre-existing work (\`proposal.target.existsBefore\` …[38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m2 out_of_scope   L0  ▌·········  0.05 exp  0.70  directly does what \`plan.remaining[0]\` or \`task\` asks              [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m3 plan_mismatch  L0  ▌·········  0.05 exp  0.70  matches \`intent\` and the plan                                      [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m4 irreversible   L1  ██▌·······  0.25 exp  0.70  restorable by regenerating or reinstalling inside the workspace    [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [39m5 matches_intent  —  not judged this step                                                                           [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;243;134;161m  ╶──── src/a.py                                                                                                    [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;243;134;161m  @@ -1 +1 @@                                                                                                       [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;248;113;113m  -x = 1                                                                                                            [38;2;251;191;36m │[39m
[38;2;251;191;36m│ [38;2;74;222;128m  +x = 2                                                                                                            [38;2;251;191;36m │[39m
[38;2;251;191;36m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m
[38;2;212;91;182m╭─ [1m[38;2;243;134;161mjev+llm[22m[38;2;212;91;182m ───────────────────────────────────────────────────────────────────────────────────────────────────── [39m[2mproj[22m[38;2;212;91;182m ─╮[39m
[38;2;212;91;182m│ [39m› [2m(review pending — keys in the card; d opens a note)[22m                                                               [38;2;212;91;182m │[39m
[38;2;212;91;182m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;2;212;91;182m│ [39mreview                                                                    step 1/40 1m12s  run $0.13/2.00 ok  ? help[38;2;212;91;182m │[39m
[38;2;212;91;182m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 40x120 streaming 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m
1. read the 失敗 test ─┤ café́ 👍🏽 and the fixture
2. fix parse_date in src/dates.py — 日本語 partial


                                [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████  Decisions, not strings[22m
                                [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
                                [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m


[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39malso check 日本語 ✓ edge                                                                                          [2m │[22m
[2m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22m[38;2;243;134;161m⢎⣉⡱[39m replying                                                                                        step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[22m"
`;

exports[`frame identity: the real App, byte for byte (SGR included) > 40x120 thinking 1`] = `
"[2m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[22m


                                [38;2;243;134;161m    ██ ███████ ██    ██  [39m[2m██████  ██████  ██████  ███████  Decisions, not strings[22m
                                [38;2;243;134;161m    ██ ██      ██    ██ [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m    ██ █████   ██    ██ [39m[2m██      ██    ██ ██   ██ █████[22m
                                [38;2;243;134;161m██  ██ ██       ██  ██  [39m[2m██      ██    ██ ██   ██ ██[22m
                                [38;2;243;134;161m ████  ███████   ████    [39m[2m██████  ██████  ██████  ███████  [22m[38;2;212;91;182m◆ [39m[2m0.6.0[22m


[2m╭─ [22m[1m[38;2;243;134;161mllm+jev · verified[39m[22m[2m ────────────────────────────────────────────────────────────────────────────────────────── proj ─╮[22m
[2m│ [22m[38;2;243;134;161m› [39m[2m(thinking…)[22m                                                                                                       [2m │[22m
[2m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[22m
[2m│ [22m[38;2;243;134;161m⢎⣉⡱[39m thinking                                                                                        step 0/–  ? help[2m │[22m
[2m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[22m"
`;
